reworked menu buttons